property/singleProperty/login/signup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,38 @@ body {
   width: 5rem !important;
   margin-left: 1 rem !important;
 }
+
+.propertyImage{
+  height: 80vh !important;
+}
+
+.bg-image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+.signupPage{
+  width: 55%;
+  margin-top: 1%;
+  left: 20%;
+  padding: 3%;
+   background-color: white !important;
+}
+
+.noPropertiesFound{
+  text-align: center;
+  width: 92vw !important;
+  height: calc(100vh - 15.75rem);
+}
+
+.loginPage{
+  width: 42%;
+  margin-top: 9%;
+  left: 20%;
+  padding: 3%;
+  background-color: white !important;
+  margin-left: 27%;
+}
